# cpp-chess

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
core/: Bitboard.h  Squares.h  Status.h
include/: BaseBoard.h  Bitboard.h  Bitboards.h  Board.h  LegalMoveGenerator.h  Move.h  Piece.h  Square.h  Squares.h  Status.h
python-interface/: CMakeLists.txt  chess.cpp  test.py
src/: Bitboard.cpp
